--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "mysql": "^2.18.1"
   },
   "dependencies": {
+    "audit": "^0.0.6",
     "cors": "^2.8.5",
+    "formidable": "^2.0.1",
+    "fs": "^0.0.1-security",
     "jwt-simple": "^0.5.6",
     "multer": "^1.4.5-lts.1"
   }
